--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketGroupContainer.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketGroupContainer.fxml
@@ -4,5 +4,5 @@
 
 
 <VBox fx:id="BracketGroupContainer" alignment="CENTER" prefHeight="421.0" prefWidth="421.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.BracketGroupContainerController">
-    <!--> will out groups in this BBox <!-->
+    <!--> will place groups in this BBox <!-->
     </VBox>
